Cooler prompt, some VS Code settings syncing.

--- a/etc/vscode/settings.json
+++ b/etc/vscode/settings.json
@@ -81,9 +81,9 @@
     "useRustfmt": true
   },
   "workbench.colorCustomizations": {
-    "statusBar.background": "#5f00af",
-    "statusBar.noFolderBackground": "#5f00af",
-    "statusBar.debuggingBackground": "#5f00af"
+    "statusBar.background": "#005f5f",
+    "statusBar.noFolderBackground": "#005f5f",
+    "statusBar.debuggingBackground": "#005f5f"
   },
   "vim.neovimPath": "/usr/local/bin/nvim",
   "python.jediEnabled": false,
@@ -121,5 +121,12 @@
   "notebook.cellToolbarLocation": {
     "default": "right",
     "jupyter-notebook": "left"
-  }
+  },
+  "python.formatting.provider": "black",
+  "[python]": {
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": true,
+    }
+  },
+  "editor.formatOnSave": true
 }
