--- a/etc/iterm2/com.googlecode.iterm2.plist
+++ b/etc/iterm2/com.googlecode.iterm2.plist
@@ -781,8 +781,10 @@
 			<string>kNextWindowPointerAction</string>
 		</dict>
 	</dict>
-	<key>ShowFullScreenTabBar</key>
+	<key>SeparateStatusBarsPerPane</key>
 	<false/>
+	<key>ShowFullScreenTabBar</key>
+	<true/>
 	<key>SoundForEsc</key>
 	<false/>
 	<key>StatusBarPosition</key>
@@ -793,6 +795,8 @@
 	<integer>5</integer>
 	<key>TabViewType</key>
 	<integer>2</integer>
+	<key>TabsHaveCloseButton</key>
+	<false/>
 	<key>UseBorder</key>
 	<false/>
 	<key>VisualIndicatorForEsc</key>
