--- a/etc/vscode/settings.json
+++ b/etc/vscode/settings.json
@@ -133,5 +133,6 @@
   ],
   "Lua.workspace.library": [
     "/Applications/Hammerspoon.app/Contents/Resources/extensions"
-  ]
+  ],
+  "cmake.configureOnOpen": true
 }
