--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "etc/vim/pack/dtanabe/start/vim-toml"]
 	path = etc/vim/pack/dtanabe/start/vim-toml
 	url = https://github.com/cespare/vim-toml.git
+[submodule "etc/vim/pack/dtanabe/start/vim-antlr"]
+	path = etc/vim/pack/dtanabe/start/vim-antlr
+	url = https://github.com/dylon/vim-antlr.git
