--- a/etc/iterm2/com.googlecode.iterm2.plist
+++ b/etc/iterm2/com.googlecode.iterm2.plist
@@ -693,7 +693,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>HackNerdFontCompleteM-Regular 14</string>
+			<string>InputMonoNarrow-Regular 14</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
